k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hams
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: nj2pc-oem
